--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>hello world! 本地仓库master1</h1>
     <h1>hello world! 本地仓库list1</h1>
     <h1>hello world! 本地仓库list1</h1>
-    <h1>hello world! 本地仓库master1</h1
+    <h1>hello world! 本地仓库master2</h1>
 </body>
 </html>
